syntax = "proto3";

package rpc;

option go_package = "github.com/go-sif/sif/internal/rpc";

// PartitionsService manages data across the cluster
service PartitionsService {
    rpc AssignPartition (MAssignPartitionRequest) returns (MAssignPartitionResponse) {}
    rpc ShufflePartition (MShufflePartitionRequest) returns (MShufflePartitionResponse) {}
    rpc ShuffleAccumulator (MShuffleAccumulatorRequest) returns (MShuffleAccumulatorResponse) {}
    rpc TransferPartitionData (MTransferPartitionDataRequest) returns (stream MPartitionChunk) {}
    rpc TransferAccumulatorData (MTransferAccumulatorDataRequest) returns (stream MAccumulatorChunk) {}
}

message MAssignPartitionRequest {
    bytes loader = 1;
}

message MAssignPartitionResponse {
    // TODO
}

message MPartitionMeta {
    string id = 1;
    uint32 numRows = 2;
    uint32 maxRows = 3;
    uint32 rowBytes = 4;
    uint32 capacity = 5;
    uint32 metaBytes = 6;
    bool isKeyed = 7;
}

message MShufflePartitionRequest {
    uint64 bucket = 1;
}

message MShufflePartitionResponse {
    bool ready = 1;
    bool hasNext = 2;
    MPartitionMeta part = 3;
}

message MTransferPartitionDataRequest {
    string id = 1;
}

message MPartitionChunk {
    bytes data = 1;
    int32 dataType = 2;
    repeated uint64 keyData = 3 [packed=true];
    int32 varDataRowNum = 4;
    string varDataColName = 5;
    int32 totalSizeBytes = 6;
    int32 remainingSizeBytes = 7;
    int32 append = 8;
}

message MShuffleAccumulatorRequest {
}

message MShuffleAccumulatorResponse {
    bool ready = 1;
    int32 totalSizeBytes = 2;
}

message MTransferAccumulatorDataRequest {
}

message MAccumulatorChunk {
    bytes data = 1;
}

// Intended for disk serialization, not transmission
message DPartition {
    string id = 1;
    uint32 numRows = 2;
    uint32 maxRows = 3;
    uint32 capacity = 4;
    bool isKeyed = 5;
    bytes rowData = 6;
    bytes rowMeta = 7;
    repeated uint64 keys = 8 [packed=true];

    message DVarCol {
        map<uint32, bytes> rowData = 1;
    }
    map<string, DVarCol> serializedVarRowData = 9;
}
